# src/main/resources/api.yml
@@ -54,9 +54,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/MenuModel'
+                $ref: '#/components/schemas/MenuModel'
         '400':
           description: 400 Bad Request ("неправильный, некорректный запрос)
         '404':
@@ -81,9 +79,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/MenuModel'
+                $ref: '#/components/schemas/MenuModel'
         '400':
           description: 400 Bad Request ("неправильный, некорректный запрос)
         '404':
@@ -129,9 +125,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/MenuModel'
+                $ref: '#/components/schemas/MenuModel'
         '400':
           description: 400 Bad Request ("неправильный, некорректный запрос)
         '404':
@@ -141,33 +135,6 @@ paths:
 
 
   /purchase:
-    post:
-      tags:
-        - purchase
-      summary: Совершение покупки
-      description: Совершение покупки
-      operationId: addPurchase
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AddPurchaseRequest'
-      responses:
-        '200':
-          description: Покупка совершена успешно
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/PurchaseModel'
-        '400':
-          description: 400 Bad Request ("неправильный, некорректный запрос)
-        '404':
-          description: 404 Not Found ("не найдено")
-        '500':
-          description: Internal Server Error ("внутрення ошибка сервера")
-
     get:
       tags:
         - purchase
@@ -194,6 +161,30 @@ paths:
           description: 404 Not Found ("не найдено")
         '500':
           description: Internal Server Error ("внутрення ошибка сервера")
+    post:
+      tags:
+        - purchase
+      summary: Совершение покупки
+      description: Совершение покупки
+      operationId: addPurchase
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddPurchaseRequest'
+      responses:
+        '200':
+          description: Покупка совершена успешно
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PurchaseModel'
+        '400':
+          description: 400 Bad Request ("неправильный, некорректный запрос)
+        '404':
+          description: 404 Not Found ("не найдено")
+        '500':
+          description: Internal Server Error ("внутрення ошибка сервера")
 
 
   /customer:
@@ -211,7 +202,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PurchaseModel'
+                  $ref: '#/components/schemas/CustomerModel'
         '400':
           description: 400 Bad Request ("неправильный, некорректный запрос)
         '404':
